@@ -192,6 +192,7 @@ Explaination:
  <dt>htaccess<dd>The default htaccessfile
  <dt>tmpldir<dd>Where the templates reside
  <dt>graph_strategy<dd>Set to "cron" to draw the graphs periodically via cron every 5 minutes. Set to "cgi" to draw on-demand. (default cron)
+ <dt>graphcgiurl<dd>URL to the CGI script doing the graphing (if graph_strategy is "cron"). (default <tt>/cgi-bin/munin-cgi-graph</tt>)
  <dt>fork<dd>If set, run updates of several hosts simultaneously. (default yes)
  <dt>max_processes<dd>Set max number of simultaneous Munin processes.
  <dt>nsca*<dd>Nagios options. See seperate section. Deprecated, use contacts instead.
