@@ -1,6 +1,7 @@
 munin (work)
 
   * Main: Optimised munin-cgi-graph a bit.
+  * Main: Added option cgiurl_graph.
   * Packaging: Expand man-page macros properly on man-page generation 
     (Deb#286399).
   * Plugin: Added plugin generic/dhcpd3, created by Rune N. Skillingstad.
